Table categories {
  id           bigserial [pk]
  name         varchar(255) [not null]
  parent_id    bigint [ref: > categories.id]
  created_at   timestamptz [not null, default: `now()`]

  Note: 'Категории товаров с неограниченной вложенностью'
}

Table category_closure {
  ancestor_id   bigint [not null, ref: > categories.id]
  descendant_id bigint [not null, ref: > categories.id]
  depth         int    [not null]

  indexes {
    (ancestor_id, descendant_id) [unique]
    (descendant_id, ancestor_id)
    (ancestor_id, depth)
  }

  Note: 'Closure-table для быстрых запросов по дереву (любой уровень)'
}

Table products {
  id           bigserial [pk]
  name         varchar(255) [not null]
  price        numeric(12,2) [not null]
  stock_qty    integer [not null, default: 0]
  category_id  bigint [not null, ref: > categories.id]
  created_at   timestamptz [not null, default: `now()`]

  indexes {
    (category_id)
    (name)
  }

  Note: 'Номенклатура'
}

Table clients {
  id          bigserial [pk]
  name        varchar(255) [not null]
  address     text
  created_at  timestamptz [not null, default: `now()`]

  indexes {
    (name)
  }
}

Table orders {
  id          bigserial [pk]
  client_id   bigint [not null, ref: > clients.id]
  order_date  timestamptz [not null, default: `now()`]
  status      varchar(30) [not null, default: 'created']
  created_at  timestamptz [not null, default: `now()`]

  indexes {
    (client_id)
    (order_date)
    (status)
  }

  Note: 'Заказы покупателей'
}

Table order_items {
  order_id    bigint [not null, ref: > orders.id]
  product_id  bigint [not null, ref: > products.id]
  quantity    int [not null]
  unit_price  numeric(12,2) [not null]
  created_at  timestamptz [not null, default: `now()`]

  Note: 'Состав заказа'

  indexes {
    (order_id)
    (product_id)
    (order_id, product_id) [pk]
  }
}
